--- a/IdentityDemo/Views/Account/Login.cshtml
+++ b/IdentityDemo/Views/Account/Login.cshtml
@@ -234,11 +234,11 @@
                             <label class="col-form-label fs-6 me-3">Log in as:</label>
                             <div class="d-flex align-items-center">
                                 <div class="form-check form-check-inline fs-6 me-3">
-                                    <input class="form-check-input" type="radio" name="role" id="user" value="user">
+                                    <input class="form-check-input" type="radio" name="Role" id="user" value="user" checked>
                                     <label class="form-check-label" for="user">User</label>
                                 </div>
                                 <div class="form-check form-check-inline fs-6">
-                                    <input class="form-check-input" type="radio" name="role" id="owner" value="owner">
+                                    <input class="form-check-input" type="radio" name="Role" id="owner" value="owner">
                                     <label class="form-check-label" for="owner">Owner</label>
                                 </div>
                             </div>
