--- a/IdentityDemo/Views/Home/About.cshtml
+++ b/IdentityDemo/Views/Home/About.cshtml
@@ -106,8 +106,8 @@
             </div>
             <div class="col-lg-4 col-md-6">
                 <div class="team-member">
-                    <img src="~/img/hywm_img/hywm-img.png" alt="Team Member 3">
-                    <h3>May Htet</h3>
+                    <img src="~/img/HtunMyatAung/hywm_profile.jpg" alt="Team Member 3">
+                    <h3>Hnin Yawai Min</h3>
                     <p>UI/UX</p>
                     <p><i class="fab fa-twitter"></i> <i class="fab fa-linkedin"></i></p>
                 </div>
