--- a/IdentityDemo/Views/Home/Show_error_loading.cshtml
+++ b/IdentityDemo/Views/Home/Show_error_loading.cshtml
@@ -39,7 +39,7 @@
                 <div class="error-message">
                     <h3>Error loading!</h3>
                     <p>We encountered an unexpected issue while trying to load the page. Please try again later or contact support if the issue persists.</p>
-                    <a href="/Home/Index" class="btn btn-primary">Go to Homepage</a>
+                    <a href="/Hywm/Landing_page2" class="btn btn-primary">Go to Homepage</a>
                 </div>
             </div>
         </div>
