--- a/IdentityDemo/Views/Order/Invoice.cshtml
+++ b/IdentityDemo/Views/Order/Invoice.cshtml
@@ -111,7 +111,7 @@
             <!-- Notes Section -->
             <div class="notes" style="margin-bottom: 20px;">
                 <h3 style="margin: 0 0 10px 0;">Notes:</h3>
-                <p style="margin: 0;">Thank you for your business!<br>If you have any questions, please contact us at uabzone@gmail.com</p>
+                <p style="margin: 0;">Thank you for your business!<br>If you have any questions, please contact us at swiftfoods48@gmail.com</p>
             </div>
         </div>
          
@@ -185,7 +185,7 @@
             window.location.href = '/Order/SaveInvoice';
         }
         function cancelgoBackToAnotherPage() {
-            window.location.href = '/Item/HomePageItems';
+            window.location.href = '/Hywm/Landing_page2';
         }
         
     
