--- a/IdentityDemo/Views/Order/Order_confirm.cshtml
+++ b/IdentityDemo/Views/Order/Order_confirm.cshtml
@@ -134,7 +134,7 @@
                                 <input type="text" placeholder="Enter your current address" style="width:264px; height: 45px; margin-right:8px; margin-bottom:10px;" required />
 
                                 <div class="d-flex justify-content-end" style="margin-right: 8px; margin-top: 25px;">
-                                <a href="@Url.Action("HomePageItems","Item")" class="btn btn-secondary mr-1 d-flex align-items-center justify-content-center" style="width:130px;height:45px;">
+                                <a href="@Url.Action("Landing_page2","Hywm")" class="btn btn-secondary mr-1 d-flex align-items-center justify-content-center" style="width:130px;height:45px;">
                                     Cancel
                                 </a>
                                 <button class="btn btn-primary d-flex align-items-center justify-content-center" style="width:130px;height:45px;" type="submit">
