--- a/IdentityDemo/Views/Shared/_User_layout.cshtml
+++ b/IdentityDemo/Views/Shared/_User_layout.cshtml
@@ -9,11 +9,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Near Foods</title>
+    <title>- Near Foods</title>
     <link rel="stylesheet" href="~/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link href="~/css/download_css/5_2_3_bootstrap.min.css" rel="stylesheets" />
-    <script src="~/js/download_js/5_2_3_bootstrap.bundle.min.js"></script>
+    
 
     <style>
         .navbar-nav {
@@ -93,8 +92,6 @@
 
     
 
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
