--- a/IdentityDemo/Views/AdminControl/Admin_change_password.cshtml
+++ b/IdentityDemo/Views/AdminControl/Admin_change_password.cshtml
@@ -14,7 +14,7 @@
             padding: 30px;
             border: 1px solid #e1e4e8;
             border-radius: 6px;
-            background-color: #fff;
+            background-color: #D9D9D9;
         }
 
         .github-label {
@@ -27,7 +27,7 @@
             padding: 6px 8px;
             font-size: 14px;
             line-height: 20px;
-            color: #24292e;
+            color: #fff;
             background-color: #fafbfc;
             border: 1px solid #e1e4e8;
             border-radius: 6px;
@@ -65,7 +65,7 @@
     <div class="row justify-content-center">
         <div class="col-md-7">
             <form asp-controller="AdminControl" asp-action="Admin_change_password" method="post" class="github-login-form" id="changePasswordForm">
-                <h1 class="text-center">Change Password</h1>
+                <h3 class="text-center">Welcome! Change Your Password</h3>
                 <div class="form-group">
                     <label asp-for="OldPassword" class="github-label">Old Password</label>
                     <input type="password" class="form-control github-input" asp-for="OldPassword" id="oldPassword" />
