--- a/IdentityDemo/Views/Hywm/Landing_page2.cshtml
+++ b/IdentityDemo/Views/Hywm/Landing_page2.cshtml
@@ -7,203 +7,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="~/css/hywm_css/Landing_page.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css" />
     <title>Two Containers Layout</title>
-    <link rel="stylesheet" href="~/css/hywm_css/Landing_page.css" />
+    
     <style>
-        body {
-            font-family: 'Piazzolla', serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            display: flex;
-        }
-
-        .superleft {
-            width: 7%;
-            background-color: #B1454A;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            position: relative;
-        }
-
-        .directiontext {
-            writing-mode: vertical-rl;
-            color: rgba(255, 255, 255, 0.1);
-            font-weight: bold;
-            font-size: 6rem;
-            transform: rotate(180deg);
-            position: absolute;
-        }
-
-        .left {
-            width: 23%;
-            background-color: #B1454A;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
-            padding-left: 20px;
-            position: relative;
-        }
-
-        .foodtext {
-            color: #fff;
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
-            position: relative;
-            z-index: 2;
-        }
-
-        .food-img {
-            position: absolute;
-            z-index: 1;
-        }
-
-        .food1 {
-            top: 5%;
-            left: 50%;
-            height: 150px;
-            width: 150px;
-        }
-
-        .food2 {
-            top: 25%;
-            left: 75%;
-            height: 200px;
-            width: 200px;
-        }
-
-        .food3 {
-            top: 50%;
-            left: 40%;
-            height: 220px;
-            width: 220px;
-        }
-
-        .food4 {
-            top: 72%;
-            left: 80%;
-            height: 170px;
-            width: 170px;
-        }
-
-        .right {
-            width: 70%;
-            background-color: #F5F5F5;
-            position: relative;
-        }
-
-        .leftdesign {
-            padding-left: 15%;
-            padding-bottom: 0;
-            padding-right: 5%;
-        }
-
-        .foodtext1 {
-            font-size: 2rem;
-            color: white;
-            margin-top: 10%;
-        }
-
-        .foodtext2 {
-            font-size: 2rem;
-            margin-top: 30%;
-            color: white;
-            margin-left: 30%;
-        }
-
-        .foodtext3 {
-            font-size: 2rem;
-            margin-top: 30%;
-            color: white;
-            margin-left: 10%;
-        }
-
-        .foodtext4 {
-            font-size: 2rem;
-            margin-top: 26%;
-            color: white;
-            margin-left: 5%;
-        }
-
-        .wefood {
-            font-weight: bold;
-        }
-
-        .bestfood {
-            font-weight: bold;
-        }
-
-        .signupbtn {
-            margin-top: 0;
-            padding: 10px 20px;
-            font-size: 1.2rem; /* Adjusted this line */
-            font-weight: bold;
-        }
-
-        .howtobtn {
-            margin-left: 5%;
-            margin-top: 0;
-            font-weight: bold;
-            font-size: 1.2rem; /* Adjusted this line */
-            display: inline-flex;
-            align-items: center;
-        }
-
-            .howtobtn .play-button {
-                margin-right: 5px;
-            }
-
-        .lastpart {
-            background-color: #D9D9D9;
-            width: 100%;
-            height: 20%;
-            margin-top: 30px;
-            display: flex;
-            justify-content: center; /* Horizontally center */
-            align-items: center; /* Vertically center */
-        }
-
-        .usercount {
-            padding-left: 5%;
-            margin: auto 0;
-            font-size: 5rem;
-        }
-
-        .happycustomer {
-            width: 40%;
-            height: 80%;
-            align-items: center;
-        }
-
-        .happy {
-            padding-left: 10%;
-            color: rgba(0,0,0,50%)
-        }
-
-        .vertical-line {
-            border-left: 6px solid rgba(0,0,0,80%);
-            height: 60%;
-        }
-
-        .lakanquot {
-            padding-left: 10%;
-            font-size: 1.4rem;
-        }
+       
     </style>
 </head>
 <body>
     <div class="container" id="homef">
         <div class="superleft">
-            <p class="directiontext">NEARFOODS</p>
+            <p class="directiontext">SWIFTFOODS</p>
         </div>
         <div class="left">
             <p class="foodtext1">Breakfast</p>
@@ -272,9 +91,9 @@
             <div class="slide-container">
                 @foreach(var shop in Model.Shops)
                 {
-                    <div class="slide">
+                    <a href="@Url.Action("SingleShopView", "Hywm", new { shopId = shop.ShopId })" class="slide">
                         <img src="~/img/shop/@shop.ProfileImagePath" alt="@shop.ShopName">
-                    </div>
+                    </a>
                 }
                
                 <!-- Add more slide divs as needed -->
@@ -287,17 +106,17 @@
         <div class="food_items">
             @foreach (var item in Model.Items)
             {
-                <div class="food_item">
-                    <div class="food_overlay">
-                        <img class="small_image" src="~/img/items/@item.ItemImageName" alt="Small Background">
-                        <div class="text_bg_container">
-                            <img class="text_bg" src="~/img/hywm_img/items/Item_text_bg.png" alt="Text Background">
-                            <span class="food_name">@item.ItemName</span>
+                <a href="@Url.Action("SingleShopView", "Hywm", new { shopId = item.Shop_Id })" >
+                    <div class="food_item">
+                        <div class="food_overlay">
+                            <img class="small_image" src="~/img/items/@item.ItemImageName" alt="Small Background">
+                            <div class="text_bg_container">
+                                <img class="text_bg" src="~/img/hywm_img/items/Item_text_bg.png" alt="Text Background">
+                                <span class="food_name">@item.ItemName</span>
+                            </div>
                         </div>
                     </div>
-                    
-                </div>
-               
+                </a>
 
             }
         </div>
