--- a/IdentityDemo/Views/Hywm/User_profile.cshtml
+++ b/IdentityDemo/Views/Hywm/User_profile.cshtml
@@ -194,6 +194,13 @@
             .order-table tbody tr:hover {
                 background-color: #ddd; /* Light gray background on row hover */
             }
+            .wish-row:hover{
+                background-color:gray;
+            }
+
+        .profilecheck span{
+            font-size:13px;
+        }
     </style>
 </head>
 <body class="hold-transition sidebar-mini">
@@ -266,56 +273,56 @@
                         <div id="profileCard2" class="col-md-4 h-130 d-flex flex-column flex-grow-1 hide fixed-height">
                             <!-- Profile Image -->
                             <div class="card card-primary card-outline" style="background-color:#D9D9D9;height:100%;">
-                                <form asp-controller="Account" asp-action="User_profile" method="post" enctype="multipart/form-data" runat="server" class="form-horizontal">
+                                <form id="profileForm" asp-controller="Account" asp-action="User_profile" method="post" enctype="multipart/form-data" runat="server" class="form-horizontal">
                                     <input type="hidden" asp-for="UserId" />
                                     <div class="card-body box-profile">
                                         <div class="text-center mb-0 img-position-relative">
                                             <label for="imgInp">
-                                            <img id="blah" src="~/img/users/@currentUser.UserImageName" alt="Preview Image" class="profile-user-img img-fluid img-circle" style="width: 110px;height:110px;" />
+                                                <img id="blah" src="~/img/users/@currentUser.UserImageName" alt="Preview Image" class="profile-user-img img-fluid img-circle" style="width: 110px;height:110px;" />
                                             </label>
                                             <input asp-for="UserImage" class="form-control-file" accept="image/*" type="file" id="imgInp" name="UserImage" onchange="previewImage(event)" style="display: none;" />
 
-                                            <label for="imgInp" >
+                                            <label for="imgInp">
                                                 <i class="fas fa-camera camera-icon"></i>
                                             </label>
-                                        </div>                                     
-                                        <ul class="list-group list-group-unbordered mb-3">
+                                        </div>
+
+                                        <div asp-validation-summary="All" class="text-danger"></div>
+
+                                        <ul class="list-group list-group-unbordered mb-3 profilecheck">
                                             <li class="list-group-item1">
                                                 <div class="label">Full Name</div>
-                                                <div class="value">
-                                                    <input asp-for="UserName" class="form-control" >
-                                                    <span asp-validation-for="UserName" class="text-danger"></span>
+                                                <div class="value">                                                   
+                                                    <input asp-for="UserName" id="UserName" class="form-control" value="@Model.UserName?.Replace('_', ' ')" required>                                                    
                                                 </div>
-
                                             </li>
+                                            <span id="nameError" class="text-danger"></span>
                                             <li class="list-group-item1">
                                                 <div class="label">Phone Number</div>
                                                 <div class="value">
-                                                    <input asp-for="UserPhone" class="form-control" placeholder="Phone number">
-                                                    <span asp-validation-for="UserPhone" class="text-danger"></span>
+                                                    
+                                                    <input asp-for="UserPhone" id="UserPhone" class="form-control" placeholder="Phone number" required>
+                                                    
                                                 </div>
                                             </li>
+                                            <span id="phoneError" class="text-danger"></span>
                                             <li class="list-group-item1">
                                                 <div class="label">Email</div>
-                                                <div class="value">
-                                                    <input asp-for="UserEmail" class="form-control" >
-                                                    <span asp-validation-for="UserEmail" class="text-danger"></span>
+                                                <div class="value">                                                    
+                                                    <input asp-for="UserEmail" id="UserEmail" class="form-control" required>                                                    
                                                 </div>
                                             </li>
+                                            <span id="emailError" class="text-danger"></span>
                                             <li class="list-group-item1">
                                                 <div class="label">Address</div>
                                                 <div class="value">
-                                                    <input asp-for="Address" class="form-control" placeholder="Address">
-                                                    <span asp-validation-for="UserPhone" class="text-danger"></span>
+                                                    <input asp-for="Address" id="Address" class="form-control" placeholder="Address" required>
+                                                    <span asp-validation-for="Address" class="text-danger"></span>
                                                 </div>
-                                            </li>                                            
-
+                                            </li>
                                         </ul>
 
-                                        <button type="submit" style="text-align:center; background-color:black; color:white;border-radius: 6px; height: 33px;" type="submit" class="dropdown-item">Submit</button>
-                                        
-
-
+                                        <button type="submit" style="text-align:center; background-color:black; color:white;border-radius: 6px; height: 33px;" class="dropdown-item">Submit</button>
                                     </div>
                                 </form>
                                 <!-- /.card-body -->
@@ -329,7 +336,7 @@
                             <div class="card flex-grow-1" style="background-color:#D9D9D9">
                                 <div class="card-header p-2">
                                     <ul class="nav nav-pills justify-content-around">
-                                        <li class="nav-item"><a class="nav-bar-border" href="#Order_list" data-toggle="tab">Order History</a></li>
+                                        <li class="nav-item"><a class="nav-bar-border active" href="#Order_list" data-toggle="tab">Order History</a></li>
                                         <li class="nav-item"><a class="nav-bar-border" href="#wishlist" data-toggle="tab">Wish List</a></li>
 
                                     </ul>
@@ -353,7 +360,7 @@
                                                             else
                                                             {
                                                                 <!--style-->
-                                                                <table class="order-table">
+                                                                <table class="order-table" id="order_table">
                                                                     <thead>
                                                                         <tr>
                                                                             <th>#</th>
@@ -392,7 +399,7 @@
                                                                 if (Model.WishlistItems != null || Model.WishlistItems.Any()) // Replace this with your actual condition
                                                                 {
                                                                 // Render the table if the condition is true
-                                                                    <table class="wishlist-table">
+                                                                    <table class="wishlist-table" id="wish_table">
                                                                         <thead>
                                                                             <tr>
                                                                                 <th>#</th>
@@ -404,7 +411,8 @@
                                                                             @foreach(var item in Model.WishlistItems)
                                                                             {
                                                                                 <!-- Each table row represents an item -->
-                                                                                <tr class="clickable-row" data-href="https://example.com/item1">
+                                                                                
+                                                                                <tr class="clickable-row wish-row" data-href="@Url.Action("SingleShopView", "Hywm", new { shopId = item.Shop_Id })">
                                                                                 <td>
                                                                                 @counter1
                                                                                 </td>
@@ -418,7 +426,7 @@
                                                                                             <div class="label">Item Price</div>
                                                                                             <div>@item.ItemChangedPrice</div>
                                                                                             <div class="label">Shop</div>
-                                                                                            <div>@item.Shop_Id</div>
+                                                                                            <div>@Model.ShopLookup.GetValueOrDefault(item.Shop_Id, "Unknown")</div>
                                                                                         </div>
                                                                                     </td>
                                                                                 </tr>
@@ -490,11 +498,13 @@
     <script src="~/js/download_js/jquery-3.6.0.min.js"></script>
     <!-- DataTables JS -->
     <script type="text/javascript" src="~/js/download_js/1_10_24_jquery.dataTables.min.js"></script>
+    <script src="~/js/hywm/User_edit_profile.js"></script>
     <script>
         // Initialize DataTable
         $(document).ready(function () {
-            $('#Order_list').DataTable();
+            $('#order_table').DataTable();
         });
+        
         function previewImage(event) {
             const imgInp = event.target;
             const file = imgInp.files[0];
@@ -522,5 +532,6 @@
             });
         });
     </script>
+    
 </body>
 </html>
