--- a/IdentityDemo/Views/Item/CreateItem.cshtml
+++ b/IdentityDemo/Views/Item/CreateItem.cshtml
@@ -50,7 +50,7 @@
     <div class="row justify-content-center">
         <div class="col-md-10">
             <div class="card">
-                <div class="card-header text-center">
+                <div class="card-header text-center" style="background-color:black;color:white;">
                     <h2>Create Item</h2>
                 </div>
                 <div class="card-body">
