--- a/IdentityDemo/Views/Item/UpdateItem.cshtml
+++ b/IdentityDemo/Views/Item/UpdateItem.cshtml
@@ -27,7 +27,7 @@
     <div class="row justify-content-center">
         <div class="col-md-11">
             <div class="card">
-                <div class="card-header text-center">
+                <div class="card-header text-center" style="background-color:black;color:white;">
                     <h2>Item Update</h2>
                 </div>
                 <div class="card-body">
