--- a/IdentityDemo/Views/Shop/UpdateShop.cshtml
+++ b/IdentityDemo/Views/Shop/UpdateShop.cshtml
@@ -16,7 +16,7 @@
     <div class="row justify-content-center">
         <div class="col-md-10">
             <div class="card">
-                <div class="card-header text-center">
+                <div class="card-header text-center " style="background-color:black;color:white;">
                     <h2>Shop Update</h2>
                 </div>
                 <div class="card-body">
